6684385: Loop unswitching crashes without LoopNode

Without LoopNode, exit early from loop unswitching and partial peeling

Reviewed-by: kvn, never, sgoldman